src/test/ui/existential_type4.stderr
error: non-defining existential type use in defining scope
  --> $DIR/existential_type4.rs:19:1
   |
LL | / fn cmp() -> Cmp<u32> { //~ ERROR non-defining existential type use in defining scope
LL | |     5u32
LL | | }
   | |_^
   |
note: used non-generic type u32 for generic parameter
  --> $DIR/existential_type4.rs:16:22
   |
LL | existential type Cmp<T>: 'static;
   |                      ^

error: aborting due to previous error

